--- a/.github/workflows/phpcs_on_pull_request.yml
+++ b/.github/workflows/phpcs_on_pull_request.yml
@@ -8,7 +8,7 @@ name: Inspections
 jobs:
   runPHPCSInspection:
     name: Run PHPCS inspection
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
